; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_sequence.c_ErrorIfDistributedAlterSeqOwnedBy.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/commands/extr_sequence.c_ErrorIfDistributedAlterSeqOwnedBy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32, i32 }

@AccessShareLock = common dso_local global i32 0, align 4
@InvalidOid = common dso_local global i64 0, align 8
@DEPENDENCY_AUTO = common dso_local global i32 0, align 4
@DEPENDENCY_INTERNAL = common dso_local global i32 0, align 4
@ERROR = common dso_local global i32 0, align 4
@ERRCODE_FEATURE_NOT_SUPPORTED = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [80 x i8] c"cannot alter OWNED BY option of a sequence already owned by a distributed table\00", align 1
@.str.1 = private unnamed_addr constant [63 x i8] c"cannot associate an existing sequence with a distributed table\00", align 1
@.str.2 = private unnamed_addr constant [101 x i8] c"Use a sequence in a distributed table by specifying a serial column type before creating any shards.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ErrorIfDistributedAlterSeqOwnedBy(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %9 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %10 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %9, i32 0, i32 2
  %11 = load i32, i32* %10, align 4
  %12 = load i32, i32* @AccessShareLock, align 4
  %13 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %14 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = call i64 @RangeVarGetRelid(i32 %11, i32 %12, i32 %15)
  store i64 %16, i64* %3, align 8
  store i32 0, i32* %4, align 4
  %17 = load i64, i64* @InvalidOid, align 8
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* @InvalidOid, align 8
  store i64 %18, i64* %6, align 8
  store i32 0, i32* %7, align 4
  store i32 0, i32* %8, align 4
  %19 = load i64, i64* %3, align 8
  %20 = load i64, i64* @InvalidOid, align 8
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %23

22:                                               ; preds = %1
  br label %74

23:                                               ; preds = %1
  %24 = load i64, i64* %3, align 8
  %25 = load i32, i32* @DEPENDENCY_AUTO, align 4
  %26 = call i32 @sequenceIsOwned(i64 %24, i32 %25, i64* %5, i32* %7)
  store i32 %26, i32* %4, align 4
  %27 = load i32, i32* %4, align 4
  %28 = icmp ne i32 %27, 0
  br i1 %28, label %33, label %29

29:                                               ; preds = %23
  %30 = load i64, i64* %3, align 8
  %31 = load i32, i32* @DEPENDENCY_INTERNAL, align 4
  %32 = call i32 @sequenceIsOwned(i64 %30, i32 %31, i64* %5, i32* %7)
  store i32 %32, i32* %4, align 4
  br label %33

33:                                               ; preds = %29, %23
  %34 = load i32, i32* %4, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %33
  %37 = load i64, i64* %5, align 8
  %38 = call i32 @IsDistributedTable(i64 %37)
  store i32 %38, i32* %8, align 4
  br label %39

39:                                               ; preds = %36, %33
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %41 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %40, i32 0, i32 0
  %42 = load i32, i32* %41, align 4
  %43 = call i64 @OptionsSpecifyOwnedBy(i32 %42, i64* %6)
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %74

45:                                               ; preds = %39
  %46 = load i32, i32* %8, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %58

48:                                               ; preds = %45
  %49 = load i64, i64* %5, align 8
  %50 = load i64, i64* %6, align 8
  %51 = icmp ne i64 %49, %50
  br i1 %51, label %52, label %58

52:                                               ; preds = %48
  %53 = load i32, i32* @ERROR, align 4
  %54 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %55 = call i32 @errcode(i32 %54)
  %56 = call i32 @errmsg(i8* getelementptr inbounds ([80 x i8], [80 x i8]* @.str, i64 0, i64 0))
  %57 = call i32 @ereport(i32 %53, i32 %56)
  br label %73

58:                                               ; preds = %48, %45
  %59 = load i32, i32* %8, align 4
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %72, label %61

61:                                               ; preds = %58
  %62 = load i64, i64* %6, align 8
  %63 = call i32 @IsDistributedTable(i64 %62)
  %64 = icmp ne i32 %63, 0
  br i1 %64, label %65, label %72

65:                                               ; preds = %61
  %66 = load i32, i32* @ERROR, align 4
  %67 = load i32, i32* @ERRCODE_FEATURE_NOT_SUPPORTED, align 4
  %68 = call i32 @errcode(i32 %67)
  %69 = call i32 @errmsg(i8* getelementptr inbounds ([63 x i8], [63 x i8]* @.str.1, i64 0, i64 0))
  %70 = call i32 @errhint(i8* getelementptr inbounds ([101 x i8], [101 x i8]* @.str.2, i64 0, i64 0))
  %71 = call i32 @ereport(i32 %66, i32 %70)
  br label %72

72:                                               ; preds = %65, %61, %58
  br label %73

73:                                               ; preds = %72, %52
  br label %74

74:                                               ; preds = %22, %73, %39
  ret void
}

declare dso_local i64 @RangeVarGetRelid(i32, i32, i32) #1

declare dso_local i32 @sequenceIsOwned(i64, i32, i64*, i32*) #1

declare dso_local i32 @IsDistributedTable(i64) #1

declare dso_local i64 @OptionsSpecifyOwnedBy(i32, i64*) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32 @errhint(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
